# calendar

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  migrate.sh  models.py  moods.py  proxy_auth.py  pyproject.toml  query_router.py  requirements.txt  search_index.py  utils.py
docs/: MOOD_MIGRATION.md
migrations/versions/: 3a4b5c6d7e8f_add_mood_key_backfill.py  798ccc43d065_add_events_and_subevents_composite_.py  8d34948237ad_add_event_embedding_table.py  9f0a1b2c3d4e_drop_mood_table.py  c369e310433d_baseline_schema.py  da80a5e1ce02_add_attachments_table.py  f1a2b3c4d5e6_fts_porter_stemming.py
routes/: __init__.py  _helpers.py  attachments.py  auth.py  events.py  index.py  mood.py  search.py  stats.py
static/css/: index.css  search.css  shell.css  stats.css  structural.css
static/js/: app_root.js  index.js  search.js  shell.js  stats.js
templates/: index.html  stats.html
tests/: conftest.py  test_proxy_auth.py  test_query_router.py  test_routes.py  test_search.py
