[project]
name = "calendar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "blinker==1.9.0",
    "click==8.1.8",
    "flask==3.1.0",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.1.1",
    "gunicorn==23.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "packaging==24.2",
    "ruff==0.9.7",
    "sqlalchemy==2.0.38",
    "typing-extensions==4.12.2",
    "werkzeug==3.1.3",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "TID"
]  # Specify which error codes to check
